...
    widthDp = 300
)
fun BottomSheetButtonPreview() {
    AppTheme {
        SheetButton(
            buttonIcon = Icons.Rounded.Edit,
            buttonLabel = "Edit",
            onSelected = {}
        )
    }
}

