...
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@{reminder.name}"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Reminder name" />

        <ImageView
            android:id="@+id/ic_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
...
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@+id/ic_repeat"
            app:layout_constraintStart_toEndOf="@+id/ic_repeat"
            app:layout_constraintTop_toTopOf="@+id/ic_repeat"
            app:hideIfSingleReminder="@{reminder.repeatInterval}"
            app:formattedRepeatInterval="@{reminder.repeatInterval}"
            tools:text="Repeat Interval" />

        <View
            android:id="@+id/divider_interval"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
...
