...

        private fun getStateRepeatUnit(repeatInterval: RepeatInterval?): String {
            if (repeatInterval == null) return "Day"

            return when {
                repeatInterval.unit == ChronoUnit.DAYS && repeatInterval.amount == 1 -> "Day"
                repeatInterval.unit == ChronoUnit.DAYS && repeatInterval.amount != 1 -> "Days"
                repeatInterval.unit == ChronoUnit.WEEKS && repeatInterval.amount == 1 -> "Week"
                else -> "Weeks"
            }
        }

        private fun getReminderStartDateTime(date: String, time: LocalTime): ZonedDateTime {
            return LocalDateTime
                .parse("$date $time", dateTimeFormatter)
...
