<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/active_reminders">

    <fragment
        android:id="@+id/active_reminders"
        android:name="dev.shorthouse.remindme.fragments.ActiveReminderListFragment"
        android:label="Active Reminders"
        tools:layout="@layout/fragment_active_reminder_list">
        <action
            android:id="@+id/action_active_reminders_to_reminder_details"
            app:destination="@id/reminder_details" />
        <action
            android:id="@+id/action_active_reminders_to_add_reminder"
            app:destination="@id/add_reminder" />
    </fragment>

    <fragment
        android:id="@+id/all_reminders"
        android:name="dev.shorthouse.remindme.fragments.AllReminderListFragment"
        android:label="All Reminders"
        tools:layout="@layout/fragment_all_reminder_list" >
        <action
            android:id="@+id/action_all_reminders_to_reminder_details"
            app:destination="@id/reminder_details" />
        <action
            android:id="@+id/action_all_reminders_to_add_reminder"
            app:destination="@id/add_reminder" />
    </fragment>

    <fragment
        android:id="@+id/add_reminder"
        android:name="dev.shorthouse.remindme.fragments.AddReminderFragment"
        android:label="Add Reminder"
        tools:layout="@layout/fragment_add_reminder" />

    <fragment
        android:id="@+id/reminder_details"
        android:name="dev.shorthouse.remindme.fragments.ReminderDetailsFragment"
        android:label="Reminder Details"
        tools:layout="@layout/fragment_reminder_details">
        <argument
            android:name="id"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>



</navigation>